--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,2 +1,45 @@
-<h1>{{title}}</h1>
-<p>Welcome to {{title}}</p>
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <div class="container">
+        <a class="navbar-brand" href="#">Mi pagina</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+            aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav">
+                <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="#">Home</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="/login">Logueate</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="/productos">Productos</a>
+                </li>
+            </ul>
+            <div class="d-flex">
+                <a class="btn btn-outline-info" href="/registro">Registrate</a>
+            </div>
+        </div>
+    </div>
+</nav>
+<div id="about" class="mt-4">
+    <div class="container">
+        <div class="row">
+            <div class="col-md-12">
+                <div class="titlepage">
+                    <h2 class="text-white">Mi Pagina</h2>
+                    <span class="text-white">Sobre mi pagina</span>
+                </div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-md-8 offset-md-2 ">
+                <div class="about_box ">
+                    <figure><img src="images/ce7cce2b-4572-40ab-b246-1f562fe2e766.png" alt="#" /></figure>
+                    <a class="btn btn-info" href="/productos">Read more</a>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
